# genai

./: .gitignore  README.md  pyproject.toml
data/: boe_data.xml  get_boe_data.py
gen_ai/KG/cypher_queries/: build_neo4j_graph.py  query_to_neo4j.py  vector_index_question.py
gen_ai/KG/vector_index/: create_vector_index.py  populate_vector_index.py  similarity_search_vector_index.py
gen_ai/knowledge_graphs/: boe_rag.ipynb
gen_ai/knowledge_graphs/boe/: boe_rag.ipynb
gen_ai/knowledge_graphs/cypher_queries/: build_neo4j_graph.py  query_to_neo4j.py
gen_ai/knowledge_graphs/examples/recommendations/: purchase_recommendations.ipynb
gen_ai/knowledge_graphs/vector_index/: create_vector_index.py  populate_vector_index.py
gen_ai/src/models/: azure_openai.py
