[tool.poetry]
name = "genai-1"
version = "0.1.0"
description = ""
authors = ["Daniel Aguilera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.5"
neo4j = "^5.26.0"
langchain-openai = "^0.2.6"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
xmltodict = "^0.14.2"
pypdf = "^5.1.0"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
